tests/sksl/errors/golden/GrNoFragmentProcessorParams.cpp
### Compilation failed:

error: 3: parameters of type 'fragmentProcessor' not allowed
error: 6: unknown identifier 'helper'
2 errors
